step39/step05/ingress-java-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-java-demo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: test.wuchenyangzhendehaoshuai.com
    http:
      paths:
      - backend:
          service:
            name: java-demo
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
